--- a/src/JAM.Netduino3.Web/Views/AppViews/Management.cshtml
+++ b/src/JAM.Netduino3.Web/Views/AppViews/Management.cshtml
@@ -42,10 +42,10 @@
                     </div>
 
                     <div class="project-list">
-
                         <table class="table table-hover">
                             <tbody>
-                                <tr>
+                                <!--
+                               <tr>
                                     <td class="project-status">
                                         <span class="label label-primary">Active</span>
                                     </td>
@@ -121,6 +121,38 @@
                                         <a href="#" class="btn btn-white btn-sm"><i class="fa fa-pencil"></i> Edit </a>
                                     </td>
                                 </tr>
+                                --> 
+
+                                @foreach (Device device in ViewBag.Devices)
+                                {
+                                    <tr>
+                                        <td class="project-status">
+                                            <span class="label label-primary">Active</span>
+                                        </td>
+                                        <td class="project-title">
+                                            <a href="@Url.Action("ProjectDetail", "AppViews")">@device.IP</a>
+                                            <br />
+                                            <small>Updated @device.LastUpdate.ToString()</small>
+                                        </td>
+                                        <td class="project-completion">
+                                            <small>Relays powered on: @device.PoweredOnPercentage()%</small>
+                                            <div class="progress progress-mini">
+                                                <div style="width: @device.PoweredOnPercentage()%;" class="progress-bar"></div>
+                                            </div>
+                                        </td>
+                                        <td class="project-people">
+                                            @for (int i = 1; i <= @device.RelaysCount; i++)
+                                            {
+                                                <a href=""><img alt="image" class="img-circle" src="~/Images/a@(i).jpg"></a>
+                                            }
+                                        </td>
+                                        <td class="project-actions">
+                                            <a href="#" class="btn btn-white btn-sm"><i class="fa fa-refresh"></i> Refresh </a>
+                                        </td>
+                                    </tr>
+
+                                }
+
                             </tbody>
                         </table>
                     </div>
