division by zero fixed

--- a/src/JAM.Netduino3.Web/Views/AppViews/Management.cshtml
+++ b/src/JAM.Netduino3.Web/Views/AppViews/Management.cshtml
@@ -135,9 +135,9 @@
                                             <small>Updated @device.LastUpdate.ToString()</small>
                                         </td>
                                         <td class="project-completion">
-                                            <small>Relays powered on: @device.PoweredOnPercentage()%</small>
+                                            <small>Relays powered on: @device.PoweredOnPercentage%</small>
                                             <div class="progress progress-mini">
-                                                <div style="width: @device.PoweredOnPercentage()%;" class="progress-bar"></div>
+                                                <div style="width: @device.PoweredOnPercentage%;" class="progress-bar"></div>
                                             </div>
                                         </td>
                                         <td class="project-people">
