--- a/src/JAM.Netduino3.Web/Views/AppViews/Management.cshtml
+++ b/src/JAM.Netduino3.Web/Views/AppViews/Management.cshtml
@@ -141,9 +141,9 @@
                                             </div>
                                         </td>
                                         <td class="project-people">
-                                            @foreach(var relay in @device.RelaysState)
+                                            @for (int i = 0; i < @device.RelaysState.Length - 1; i++)
                                             {
-                                                <a href=""><img alt="Relay" class="img-circle" src="~/Images/state_@(relay?1:0).png"></a>
+                                                <img alt="Relay" class="img-circle" onclick="changeState(@(i+1),@(!device.RelaysState[i]?1:0), '@(device.IP)');" src="~/Images/state_@(device.RelaysState[i]?1:0).png">
                                             }
                                         </td>
                                         <td class="project-actions">
@@ -159,4 +159,3 @@
         </div>
     </div>
 </div>
-
