fixing details of registration and live relay state change

--- a/src/JAM.Netduino3.Web/Views/AppViews/Management.cshtml
+++ b/src/JAM.Netduino3.Web/Views/AppViews/Management.cshtml
@@ -147,7 +147,7 @@
                                             }
                                         </td>
                                         <td class="project-actions">
-                                            <a href="#" class="btn btn-white btn-sm"><i class="fa fa-refresh"></i> Refresh </a>
+                                            <span class="btn btn-white btn-sm" onclick="deviceRefresh('@(device.IP)');"><i class="fa fa-refresh"></i></span>
                                         </td>
                                     </tr>
                                 }
