--- a/src/JAM.Netduino3.Web/Views/Shared/_Footer.cshtml
+++ b/src/JAM.Netduino3.Web/Views/Shared/_Footer.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="footer">
     <div class="pull-right">
-        Example text
+        GrowControl
     </div>
     <div>
         <strong>Copyright</strong> JAMTech.cl &copy; 2014 - 2017
