--- a/src/JAM.Netduino3.Web/Views/AppViews/Management.cshtml
+++ b/src/JAM.Netduino3.Web/Views/AppViews/Management.cshtml
@@ -3,159 +3,6 @@
     ViewBag.Title = "Devices";
 }
 
-<div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-4">
-        <h2>Devices</h2>
-        <ol class="breadcrumb">
-            <li>
-                <a href="@Url.Action("Index", "Home")">Overview</a>
-            </li>
-            <li class="active">
-                <strong>Devices</strong>
-            </li>
-        </ol>
-    </div>
-</div>
-<div class="row">
-    <div class="col-lg-12">
-        <div class="wrapper wrapper-content animated fadeInUp">
-
-            <div class="ibox">
-                <div class="ibox-title">
-                    <h5>All available devices</h5>
-                    <div class="ibox-tools" style="display:none;">
-                        <a href="" class="btn btn-primary btn-xs">Create new project</a>
-                    </div>
-                </div>
-                <div class="ibox-content">
-                    <div class="row m-b-sm m-t-sm" style="display:none;">
-                        <div class="col-md-1">
-                            <button type="button" id="loading-example-btn" class="btn btn-white btn-sm"><i class="fa fa-refresh"></i> Refresh</button>
-                        </div>
-                        <div class="col-md-11">
-                            <div class="input-group">
-                                <input type="text" placeholder="Search" class="input-sm form-control"> <span class="input-group-btn">
-                                    <button type="button" class="btn btn-sm btn-primary"> Go!</button>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="project-list">
-                        <table class="table table-hover">
-                            <tbody>
-                                <!--
-                               <tr>
-                                    <td class="project-status">
-                                        <span class="label label-primary">Active</span>
-                                    </td>
-                                    <td class="project-title">
-                                        <a href="@Url.Action("ProjectDetail", "AppViews")">Contract with Zender Company</a>
-                                        <br />
-                                        <small>Created 14.08.2014</small>
-                                    </td>
-                                    <td class="project-completion">
-                                        <small>Completion with: 48%</small>
-                                        <div class="progress progress-mini">
-                                            <div style="width: 48%;" class="progress-bar"></div>
-                                        </div>
-                                    </td>
-                                    <td class="project-people">
-                                        <a href=""><img alt="image" class="img-circle" src="~/Images/a3.jpg"></a>
-                                        <a href=""><img alt="image" class="img-circle" src="~/Images/a1.jpg"></a>
-                                        <a href=""><img alt="image" class="img-circle" src="~/Images/a2.jpg"></a>
-                                        <a href=""><img alt="image" class="img-circle" src="~/Images/a4.jpg"></a>
-                                        <a href=""><img alt="image" class="img-circle" src="~/Images/a5.jpg"></a>
-                                    </td>
-                                    <td class="project-actions">
-                                        <a href="#" class="btn btn-white btn-sm"><i class="fa fa-folder"></i> View </a>
-                                        <a href="#" class="btn btn-white btn-sm"><i class="fa fa-pencil"></i> Edit </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="project-status">
-                                        <span class="label label-primary">Active</span>
-                                    </td>
-                                    <td class="project-title">
-                                        <a href="@Url.Action("ProjectDetail", "AppViews")">There are many variations of passages</a>
-                                        <br />
-                                        <small>Created 11.08.2014</small>
-                                    </td>
-                                    <td class="project-completion">
-                                        <small>Completion with: 28%</small>
-                                        <div class="progress progress-mini">
-                                            <div style="width: 28%;" class="progress-bar"></div>
-                                        </div>
-                                    </td>
-                                    <td class="project-people">
-                                        <a href=""><img alt="image" class="img-circle" src="~/Images/a7.jpg"></a>
-                                        <a href=""><img alt="image" class="img-circle" src="~/Images/a6.jpg"></a>
-                                        <a href=""><img alt="image" class="img-circle" src="~/Images/a3.jpg"></a>
-                                    </td>
-                                    <td class="project-actions">
-                                        <a href="#" class="btn btn-white btn-sm"><i class="fa fa-folder"></i> View </a>
-                                        <a href="#" class="btn btn-white btn-sm"><i class="fa fa-pencil"></i> Edit </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="project-status">
-                                        <span class="label label-default">Unactive</span>
-                                    </td>
-                                    <td class="project-title">
-                                        <a href="@Url.Action("ProjectDetail", "AppViews")">Many desktop publishing packages and web</a>
-                                        <br />
-                                        <small>Created 10.08.2014</small>
-                                    </td>
-                                    <td class="project-completion">
-                                        <small>Completion with: 8%</small>
-                                        <div class="progress progress-mini">
-                                            <div style="width: 8%;" class="progress-bar"></div>
-                                        </div>
-                                    </td>
-                                    <td class="project-people">
-                                        <a href=""><img alt="image" class="img-circle" src="~/Images/a5.jpg"></a>
-                                        <a href=""><img alt="image" class="img-circle" src="~/Images/a3.jpg"></a>
-                                    </td>
-                                    <td class="project-actions">
-                                        <a href="#" class="btn btn-white btn-sm"><i class="fa fa-folder"></i> View </a>
-                                        <a href="#" class="btn btn-white btn-sm"><i class="fa fa-pencil"></i> Edit </a>
-                                    </td>
-                                </tr>
-                                --> 
-
-                                @foreach (Device device in ViewBag.Devices)
-                                {
-                                    <tr>
-                                        <td class="project-status">
-                                            <span class="label label-primary">Active</span>
-                                        </td>
-                                        <td class="project-title">
-                                            <a href="http://@(device.IP)" target="_blank">@device.IP</a>
-                                            <br />
-                                            <small>Updated @device.LastUpdate.ToString()</small>
-                                        </td>
-                                        <td class="project-completion">
-                                            <small>Relays powered on <b>@device.RelaysInUse</b> of <b>@device.RelaysCount</b></small>
-                                            <div class="progress progress-mini">
-                                                <div style="width: @device.PoweredOnPercentage%;" class="progress-bar"></div>
-                                            </div>
-                                        </td>
-                                        <td class="project-people">
-                                            @for (int i = 0; i < @device.RelaysState.Length - 1; i++)
-                                            {
-                                                <img alt="Relay" class="img-circle" state="@(!device.RelaysState[i]?1:0)" onclick="changeState(@(i+1),'@(device.IP)', this);" src="~/Images/state_@(device.RelaysState[i]?1:0).png">
-                                            }
-                                        </td>
-                                        <td class="project-actions">
-                                            <span class="btn btn-white btn-sm" onclick="deviceRefresh('@(device.IP)');"><i class="fa fa-refresh"></i></span>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div id="divDevices">
+    @{Html.RenderPartial("~/Views/AppViews/Devices.cshtml");}
 </div>
