--- a/src/JAM.Netduino3.Web/Views/AppViews/Devices.cshtml
+++ b/src/JAM.Netduino3.Web/Views/AppViews/Devices.cshtml
@@ -4,48 +4,11 @@
 @{
     
 }
-<div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-4">
-        <h2>Devices</h2>
-        <ol class="breadcrumb">
-            <li>
-                <a href="@Url.Action("Index", "Home")">Overview</a>
-            </li>
-            <li class="active">
-                <strong>Devices</strong>
-            </li>
-        </ol>
-    </div>
-</div>
-<div class="row">
-    <div class="col-lg-12">
-        <div class="wrapper wrapper-content animated fadeInUp">
 
-            <div class="ibox">
-                <div class="ibox-title">
-                    <h5>All available devices</h5>
-                    <div class="ibox-tools">
-                        <button type="button" id="refresh-btn" class="btn btn-white btn-sm" onclick="devicesRefresh"><i class="fa fa-refresh"></i></button>
-                    </div>
-                </div>
-                <div class="ibox-content">
-                    <div class="row m-b-sm m-t-sm" style="display:none;">
-                        <div class="col-md-1">
-                            <button type="button" id="loading-example-btn" class="btn btn-white btn-sm"><i class="fa fa-refresh"></i> Refresh</button>
-                        </div>
-                        <div class="col-md-11">
-                            <div class="input-group">
-                                <input type="text" placeholder="Search" class="input-sm form-control"> <span class="input-group-btn">
-                                    <button type="button" class="btn btn-sm btn-primary"> Go!</button>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="project-list">
+<div class="project-list">
                         <table class="table table-hover">
                             <tbody>
-                                @foreach (Device device in ViewBag.Devices)
+                                @foreach (Device device in Model)
                                 {
                                     <tr>
                                         <td class="project-status">
@@ -76,8 +39,3 @@
                             </tbody>
                         </table>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
