--- a/src/JAM.Netduino3.Web/Views/AppViews/Devices.cshtml
+++ b/src/JAM.Netduino3.Web/Views/AppViews/Devices.cshtml
@@ -6,36 +6,39 @@
 }
 
 <div class="project-list">
-                        <table class="table table-hover">
-                            <tbody>
-                                @foreach (Device device in Model)
-                                {
-                                    <tr>
-                                        <td class="project-status">
-                                            <span class="label label-primary">Active</span>
-                                        </td>
-                                        <td class="project-title">
-                                            <a href="http://@(device.IP)" target="_blank">@device.IP</a>
-                                            <br />
-                                            <small>Updated @device.LastUpdate.ToString()</small>
-                                        </td>
-                                        <td class="project-completion">
-                                            <small>Relays powered on <b>@device.RelaysInUse</b> of <b>@device.RelaysCount</b></small>
-                                            <div class="progress progress-mini">
-                                                <div style="width: @device.PoweredOnPercentage%;" class="progress-bar"></div>
-                                            </div>
-                                        </td>
-                                        <td class="project-people">
-                                            @for (int i = 0; i < @device.RelaysState.Length - 1; i++)
-                                            {
-                                                <img alt="Relay" class="img-circle" state="@(!device.RelaysState[i]?1:0)" onclick="changeState(@(i+1),'@(device.IP)', this);" src="~/Images/state_@(device.RelaysState[i]?1:0).png">
-                                            }
-                                        </td>
-                                        <td class="project-actions">
-                                            <span class="btn btn-white btn-sm" onclick="deviceRefresh('@(device.IP)');"><i class="fa fa-refresh"></i></span>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-                    </div>
+     <table class="table table-hover">
+           <tbody>
+                @foreach (Device device in Model)
+                {
+                    <tr>
+                        <td>
+                            <img alt="Netduino" class="img-preview" src="~/Images/netduino3Wifi.jpg">
+                        </td>
+                        <td class="project-status">
+                            <span class="label label-primary">Active</span>
+                        </td>
+                        <td class="project-title">
+                            <a href="http://@(device.IP)" target="_blank">@device.IP</a>
+                            <br />
+                            <small>Updated @device.LastUpdate.ToString()</small>
+                        </td>
+                        <td class="project-completion">
+                            <small>Relays powered on <b>@device.RelaysInUse</b> of <b>@device.RelaysCount</b></small>
+                            <div class="progress progress-mini">
+                                <div style="width: @device.PoweredOnPercentage%;" class="progress-bar"></div>
+                            </div>
+                        </td>
+                        <td class="project-people">
+                            @for (int i = 0; i < @device.RelaysState.Length - 1; i++)
+                            {
+                                <img alt="Relay" class="img-circle" state="@(!device.RelaysState[i]?1:0)" onclick="changeState(@(i+1),'@(device.IP)', this);" src="~/Images/state_@(device.RelaysState[i]?1:0).png">
+                            }
+                        </td>
+                        <td class="project-actions">
+                            <span class="btn btn-white btn-sm" onclick="deviceRefresh('@(device.IP)');"><i class="fa fa-refresh"></i></span>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+     </table>
+</div>
